# carpenter

./: .gitignore  CITATION.cff  README.md  setup.cfg  setup_env_w40.sh
data/SAGA_dust_predictions/: SAGA_Mr_gr_to_AV.npy  SAGA_Mr_gr_to_u_AV.npy
data/galactic_extinction_maps/: avmap.npz  avmap_decgrid.npz  avmap_ragrid.npz
docs/: conf.py
src/carpenter/: conventions.py  cutout.py  display.py  emission.py  handler.py  merian_batch_cutout_hsc.py  pixels.py  utils.py
tests/: UGC5205_cutouts.ipynb  coordlist_example.txt  cutout.ipynb  cutouts_for_shany.ipynb  downloadcutouts.py  ha_map.ipynb
tests/example_images/hsc/: J114842.49+023037.95_HSC-g.fits  J114842.49+023037.95_HSC-g_psf.fits  J114842.49+023037.95_HSC-i.fits  J114842.49+023037.95_HSC-i_psf.fits  J114842.49+023037.95_HSC-r.fits  J114842.49+023037.95_HSC-r_psf.fits  J114842.49+023037.95_HSC-z.fits  J114842.49+023037.95_HSC-z_psf.fits
tests/example_images/merian/: J114842.49+023037.95_N540_merim.fits  J114842.49+023037.95_N540_merpsf.fits  J114842.49+023037.95_N708_merim.fits  J114842.49+023037.95_N708_merpsf.fits
