[metadata]
name = carpenter
version = 0.0.1
author = Merian collaboration
author_email = jiaxuanl@princeton.edu
description = Handy tools for working with Merian data
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/MerianSurvey/carpenter
project_urls =
    Bug Tracker = https://github.com/MerianSurvey/carpenter/issues
    Sourse Code = https://github.com/MerianSurvey/carpenter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0 ; python_version < "3.8"
    palettable
    numpy
    astropy
    matplotlib
    scipy
    multiprocess
    sep
    
[options.packages.find]
where = src

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
